                    Stripped unneeded (and incorrect) exception fd from selects
                    Minor memory leaks and bugs fixed in tcpclient
                    Major restructuring of the packet decoders and support for
                     initial decoding of PHY layer packets from devices which
                     report them.
Nov 04 2002  2.7.1  Added 'gstsearch' exploit detection
                    Added preliminary support for the WSP100 remote sensor 
                     under *nix.
                    Added data ACK packet type, still discarding ACKS
Nov 02 2002  2.7.1  Initial multiserver support
                    Completed all basic multiserver functionality ('e' in
                     panels interface)
                    Switched default ethereal to 0.9.7
                    Fixed handling of probe packets on AP networks
                    Added handling of association request and response packets
                    Fixed rate graphs when unselecting servers
Nov 01 2002  2.7.1  Rolled in patch from Russel Griffith to handle the 'time'
                     option in the logfile templates.
Oct 30 2002  2.7.1  Fixed shadowing bug in dumpfile code
Oct 29 2002  2.7.1  Fixed gpsmap bug where files found exactly where the netxml
                     specified them were skipped
                    Updated kismet2cwgd to work again
Oct 28 2002  2.7.1  Merged WSP100 and Cygwin support from Chris Waters.  See
                     docs/README.cygwin for details about building this.
                    Added alert for wellenreiter probes
Oct 26 2002  2.7.1  Merged pageup/pagedown code from Million
                    Fixed bus error on arm packet type display
Oct 23 2002  2.7.1  Fixed horribly stupid bug in AP->AP packet handling in
                     packetracker.cc (Caught by KurdtK)
                    Changed usage output of gpsmap to make error messages
                     clearer.