@@ -4,6 +4,7 @@ Nov 05 2002  2.7.1  Fixed kismet_monitor host:port support for WSP100 sensor
                     Major restructuring of the packet decoders and support for
                      initial decoding of PHY layer packets from devices which
                      report them.
+                    Fixed wsp100 capture interface being read from config
 Nov 04 2002  2.7.1  Added 'gstsearch' exploit detection
                     Added preliminary support for the WSP100 remote sensor 
                      under *nix.
